# orapc

./: CMakeLists.txt  LICENSE  README
include/OcciOperator/: OcciOperator.h
oracle/lib/: oraocci11.def  oraocci11d.def  oraocci11d.lib
src/: CMakeLists.txt
src/OcciOperator/: CMakeLists.txt  OcciOperator.cpp
