
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ORAPC)

SET(CMAKE_CXX_FLAGS "-finput-charset=GBK")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)

