

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/OcciOperator)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/oracle/include)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/oracle/lib)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/oracle/bin)

ADD_LIBRARY(OcciOperator SHARED OcciOperator.cpp)
TARGET_LINK_LIBRARIES(OcciOperator oraocci11)

